* added extra space on top of figure chooser to prevent overlap by Grid Info panel
* added Aresti column and row numbers to figure chooser
* changed layout of legal figures in figure chooser to conform to Sporting Code section 6
* added "info" button to figure chooser
* added logo for Hungarian Aerobatic Club
* added French rules and sequences for 2017
* updated French language file

2017.2
* updated BAeA logo for 2017
* fixed NaN showing in Form A figure K box when marking figures as Additional with 0 additionals allowed in rules
* Only show "Additional" when rules allow the use of Additional figures
* added dragging of sequence from system file manager to OpenAero to open it

2017.1.2
* added support for use of sequence string in library.js
* added 2017 IAC Glider Known sequences
* added Floating Point for IAC Advanced and Unlimited
* moved "F.P." to IAC Form A Aresti nrs column, when applicable
* added 2018 NZAC sequences and rules
* disabled checkForApp for other than ChromeOS as Chrome apps will be discontinued for those in 2018

2017.1.1.1
* fixed printing issue for Chrome app, caused by invalid print css

2017.1.1
* added 8.8.1.4 to Unlimited Unknown (was omitted in 2017.1)
* added BAeA 2017 sequences and updated rules
* commented all instances of beforeunload. Not supported by app. Data is always saved in localStorage
* corrected Fam 7 requirement for IAC Sportsman Free (7.2.1 thru 7.2.4, or 7.4.1 thru 7.4.6)

2017.1
* added 360 text to 360 turn
* added loop with steep turn figures (oaj, oajj, oajjj, oajjjj)
* added Grid info panel, collapsible and movable
* added automatic generating of figure group proposals
* added Google Analytics
* added support for saving reduced size sequence link
* updated CIVA rules and sequences for 2017
* updated IAC power sequences for 2017
* improved visual validation of input fields by using input:invalid CSS
* fixed fileName clearing after reload
* fixed issue where Save box would not close after saving on Windows 7